--- a/carapp/pom.xml
+++ b/carapp/pom.xml
@@ -46,11 +46,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${project.parent.version}</version>
 			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
+				<version>3.8.1</version>
+				<configuration>
                     <source>14</source>
                     <target>14</target>
                 </configuration>
